Remove print background from resume image

--- a/assets/scss/print.scss
+++ b/assets/scss/print.scss
@@ -58,6 +58,12 @@
   vertical-align: middle;
 }
 
+.author-hero-image{
+  border: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
 h2{
   font-size:20px;
 }
@@ -67,6 +73,7 @@ h3{
 p{
   font-size: 14px;
 }
+
 .page-resume {
   h2 {
     font-size: 20px;
